// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@components/PlayButton should match snapshot 1`] = `
<button
  className="play-btn btn-rounded text-truncate text-uppercase font-weight-bold  btn btn-outline-primary btn-lg btn-block"
  onClick={[Function]}
  type={undefined}
>
  Test
</button>
`;

exports[`@components/PlayButton should match snpashot when audio is playing 1`] = `
<button
  className="play-btn btn-rounded text-truncate text-uppercase font-weight-bold animated infinite pulse active btn btn-outline-primary btn-lg btn-block"
  onClick={[Function]}
  type={undefined}
>
  Test
</button>
`;
